--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
     <title>workshop18</title>
   </head>
   <body>
-    <h1>workshop18</h1>
+
+    <section class="container section">
+
+        <h1 class="title">WarsawJSWorkshop #18: Topics Manager</h1>
+
+        <nav class="navbar is-primary is-vcentered jsnav">
+
+          <div class="navbar-item">
+            <button class="button is-warning jslog">Zaloguj via GitHub</button>
+          </div>
+
+          <div class="navbar-item">
+            <a class="button is-danger jslogout">Wyloguj</a>
+          </div>
+
+
+        </nav>
+
+    </section>
+
+
+
+    <script src="scripts/main.js"></script>
+
   </body>
 </html>
