--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
           </div>
 
           <div class="navbar-item">
-            <a class="button is-danger jslogout">Wyloguj</a>
+            <button class="button is-danger jslogout">Wyloguj</button>
           </div>
+          <div class="navbar-item add"></div>
 
 
         </nav>
 
     </section>
-
-
 
     <script src="scripts/main.js"></script>
 
